--- a/aseets/design.css
+++ b/aseets/design.css
@@ -8,6 +8,8 @@ header {
     position: sticky;
     top: 0;
     z-index: 30;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 img.siteicon {
     width: 50px;
@@ -42,7 +44,6 @@ body {
     margin: 0;
 }
 .menu-group {
-    margin: 0;
     display: flex;
     justify-content: space-between;
 }
