--- a/aseets/design.css
+++ b/aseets/design.css
@@ -10,6 +10,7 @@ header {
     z-index: 30;
     padding-top: 8px;
     padding-bottom: 8px;
+    overflow: hidden;
 }
 img.siteicon {
     width: 50px;
