--- a/aseets/design.css
+++ b/aseets/design.css
@@ -79,7 +79,7 @@
   html {
     background: var(--site-background);
   }
-  p,i,span,li,h1,h2,h3,h4,h5,h6,a,label,figcaption,div { 
+  p,i,span,li,h1,h2,h3,h4,h5,h6,a,label,figcaption,div,.title { 
     color: var(--main-text);
   }
 header {
