--- a/aseets/design.css
+++ b/aseets/design.css
@@ -177,6 +177,7 @@ body {
         padding-top: 10px;
         backdrop-filter: blur(8px);
         border-left: var(--window-outline);
+        display: none;
       }
     .menu-group {
         display: grid;
@@ -200,5 +201,16 @@ body {
     }
     .nav-close span {
         display: block;
+    }
+    .title.mobileonly {
+        display: block;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        border-bottom: var(--border);
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 10px;
+        margin-bottom: 10px !important;
     }
 }
