--- a/aseets/design.css
+++ b/aseets/design.css
@@ -166,6 +166,9 @@ body {
     display: none;
 }
 @media screen and (max-width: 600px) {
+    .mobileonly {
+        display: block;
+    }
     nav.nav {
         margin: 0;
         height: 100vh;
@@ -194,7 +197,6 @@ body {
         width: 50px;
         height: 50px;
         box-shadow: var(--shadow);
-        display: block;
     }
     .nav-close span {
         display: block;
