--- a/aseets/design.css
+++ b/aseets/design.css
@@ -162,12 +162,12 @@ body {
 .menu-item a:hover {
     color: var(--main-text);
 }
-.mobileonly {
-    display:  none !important;;
+.mobileonly,.title.mobileonly {
+    display:  none;;
 }
 @media screen and (max-width: 600px) {
-    .mobileonly {
-        display: block !important;;
+    .mobileonly,.title.mobileonly {
+        display: block;
     }
     nav.nav {
         margin: 0;
@@ -197,6 +197,7 @@ body {
         width: 50px;
         height: 50px;
         box-shadow: var(--shadow);
+        display: none;
     }
     .nav-close span {
         display: block;
