--- a/aseets/design.css
+++ b/aseets/design.css
@@ -163,7 +163,7 @@ body {
     color: var(--main-text);
 }
 .mobileonly,.title.mobileonly {
-    display:  none;;
+    display:  none;
 }
 @media screen and (max-width: 600px) {
     .mobileonly,.title.mobileonly {
@@ -212,5 +212,15 @@ body {
         padding-right: 10px;
         padding-bottom: 10px;
         margin-bottom: 10px !important;
+    }
+    .nav-open {
+        background: transparent;
+        border: none;
+        margin-left: auto;
+        margin-right: 1em;
+        height: fit-content;
+        margin-top: auto;
+        margin-bottom: auto;
+        line-height: 1;
     }
 }
