--- a/aseets/design.css
+++ b/aseets/design.css
@@ -95,6 +95,7 @@ header {
     padding-top: 8px;
     padding-bottom: 8px;
     backdrop-filter: blur(8px);
+    margin-bottom: 2em;
 }
 img.siteicon {
     width: 50px;
