レスポンシブ対応その…あれいくつだっけ

--- a/aseets/design.css
+++ b/aseets/design.css
@@ -166,6 +166,47 @@ body {
 .mobileonly,.title.mobileonly {
     display:  none;
 }
+.center {
+    text-align: center;
+    display: block;
+}
+.content {
+    width: 80%;
+    margin: auto;
+}
+.profile-box {
+    width: 30%;
+    box-shadow: var(--shadow);
+    border: var(--border);
+    border-radius: 8px;
+    background: var(--border-color);
+}
+.profile-box h2 {
+    background: var(--background-primary);
+    color: var(--main-text);
+    padding: 13px;
+    border-radius: 8px 8px 0 0;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: 20px;
+    line-height: 1;
+    font-weight: 300;
+    margin-bottom: 0;
+    border-bottom: 3px solid var(--accent);
+}
+.profile-box p {
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 0 0 8px 8px;
+    padding-left: 1em;
+}
+.profile-content {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 @media screen and (max-width: 600px) {
     .mobileonly,.title.mobileonly {
         display: block;
@@ -224,45 +265,12 @@ body {
         margin-bottom: auto;
         line-height: 1;
     }
-}
-.center {
-    text-align: center;
-    display: block;
-}
-.content {
-    width: 80%;
-    margin: auto;
-}
-.profile-box {
-    width: 30%;
-    box-shadow: var(--shadow);
-    border: var(--border);
-    border-radius: 8px;
-    background: var(--border-color);
-}
-.profile-box h2 {
-    background: var(--background-primary);
-    color: var(--main-text);
-    padding: 13px;
-    border-radius: 8px 8px 0 0;
-    padding-left: 1em;
-    padding-right: 1em;
-    font-size: 20px;
-    line-height: 1;
-    font-weight: 300;
-    margin-bottom: 0;
-    border-bottom: 3px solid var(--accent);
-}
-.profile-box p {
-    font-size: 18px;
-    padding: 10px;
-    border-radius: 0 0 8px 8px;
-    padding-left: 1em;
-}
-.profile-content {
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    .profile-content {
+        display: grid;
+        gap: 0;
+        justify-content: normal;
+    }
+    .profile-box {
+        width: 100%;
+    }
 }
